# YeetMouse

./: Makefile  Performance.md  README.org  install.sh  shared_definitions.h  uninstall.sh
driver/: Makefile  accel.c  accel_modes.c  accel_modes.h  config.sample.h  driver.c  usbmouse.c  util.c  util.h
driver/FixedMath/: Fixed64.h  FixedUtil.h
gui/: ConfigHelper.cpp  ConfigHelper.h  CustomCurve.cpp  CustomCurve.h  DriverHelper.cpp  DriverHelper.h  FunctionHelper.cpp  FunctionHelper.h  ImGuiExtensions.cpp  ImGuiExtensions.h  Makefile  fonts.h  gui.cpp  gui.h  main.cpp
install_files/dkms/: dkms.conf
install_files/udev/: 99-leetmouse.rules  leetmouse_bind  leetmouse_manage
nix/: README.md  flake.nix  module.nix  package.nix
pkg/: PKGBUILD.template  yeetmouse-driver-dkms.install
scripts/: bind.sh  build_arch.sh  build_pkg.sh
tests/: CMakeLists.txt  CleanUpFiles.py  Readme.md  TestManager.cpp  TestManager.h  Tests.cpp  Tests.h  main.cpp
tests/driver/: config.h
